# Disc

./: .gitignore  CMakeLists.txt  Packdef.h  chat.cpp  chat.h  imagecropdialog.cpp  imagecropdialog.h  login.cpp  login.h  login.ui  main.cpp  md5.cpp  md5.h  resources.qrc  transferpanel.cpp  transferpanel.h  version.h  widget.cpp  widget.h  widget.ui  整体架构设计.md  项目概述.md
.github/workflows/: build-windows-client.yml
DiscServer/: CMySql.cpp  CMySql.h  DiscServer.pro  Packdef.h  main.cpp  tou.h
DiscServer/kernel/: IKernel.h  TCPKernel.cpp  TCPKernel.h  kernel.pri
DiscServer/server/: INet.h  server.pri  tcpnet.cpp  tcpnet.h
build-local-qt611/: .ninja_deps  .ninja_log  CMakeCache.txt  DiskClientSmokeTest  build.ninja  cmake_install.cmake
build-local-qt611/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-local-qt611/DiskClient.app/Contents/: Info.plist
build-local-qt611/DiskClient.app/Contents/MacOS/: DiskClient
build-local-qt611/DiskClientApp_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-local-qt611/DiskClientApp_autogen/7EM65HM6UG/: moc_tcpnet.cpp  moc_tcpnet.cpp.d
build-local-qt611/DiskClientApp_autogen/7GB2EGQPHR/: moc_tcpkernel.cpp  moc_tcpkernel.cpp.d
build-local-qt611/DiskClientApp_autogen/EWIEGA46WW/: moc_chat.cpp  moc_chat.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_transferpanel.cpp  moc_transferpanel.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-local-qt611/DiskClientSmokeTest_autogen/: deps  moc_predefs.h
client/: INet.h  tcpnet.cpp  tcpnet.h
deploy/: package_windows_client.ps1  windows_package_layout.md
diskclient/: Packdef.h  chat.cpp  chat.h  chat.ui  chat.ui.autosave  diskclient.pro  diskclient.pro.user.23c48e5  login.cpp  login.h  main.cpp  md5.h  tou.h  widget.cpp  widget.h
diskclient/client/: INet.h  tcpnet.cpp  tcpnet.h
diskclient/kernel/: IKernel.h  tcpkernel.cpp  tcpkernel.h
kernel/: IKernel.h  tcpkernel.cpp  tcpkernel.h
tests/: smoke_test.cpp
